Improved the dimensions of the newer divs and fixed their overspilling.

--- a/style.scss
+++ b/style.scss
@@ -158,8 +158,7 @@ justify-content: center;
 .xt{
 background-color: white;
 display: flex;
-width: 100%;
-margin: 10px 50px;
+margin: 10px;
 justify-content: center;
 }
 
@@ -189,7 +188,6 @@ border: 1px solid black;
 
 .xta{
     text-align: center;
-    width: 100;
     margin-left: 20px;
     margin-right: 20px;
     padding-bottom: 40px;
@@ -366,6 +364,7 @@ i2{
     padding-top: 50px;
 }
 .bar{
+    display: inline-block;
     margin-left: 100px;
     border-bottom: 5px solid black;
 }
@@ -374,13 +373,29 @@ i2{
 .readmore9{
     h3{
         color: #2ecc71;
+        height: 150px;
+    }
+    img{
+        width: 100%;
+        max-height: 100%;
+        object-fit: contain;
     }
 }
 
 .readmore10{
     h3{
-    color: #4183d7;
+        color: #4183d7;
+        height: 150px;
     }
+    img{
+        width: 100%;
+        max-height: 100%;
+        object-fit: contain;
+    }
+}
+
+.inner-readmore{
+    margin: 20px;
 }
 
 @media screen and (max-width: 900px) {
